fix: bad overflow in dict names

--- a/sakura/src/App.css
+++ b/sakura/src/App.css
@@ -9,6 +9,7 @@ body {
 
 #dictionary-list .dict-name {
   cursor: pointer;
+  display: inline-block;
 }
 
 body {
